react-client/src/pages/dashboard/dashboard.scss
@import "../../components/responsive";

#Dashboard {
  .plan-steps {
    margin-top: 2rem;
  }
}

#Dashboard h2 {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
}

#Dashboard .exit-prototype {
  font-size: 9pt;
}

.edit-button {
  position: relative;
}

.action-required-text {
  margin-left: 10px;
}

.action-required-validation {
  background-color: #ffe8e8;
  padding: 10px 5px;
}

.action-required {
  width: 5px;
  height: 5px;
  background: red;
  border-radius: 99999px;
  z-index: 2;
  display: block;
  position: absolute;
  top: -15px;
  bottom: auto;
  right: -5px;
  margin: 1rem 0;
}

.filter-container {
  display: flex;
  justify-content: space-between;
  margin: 0rem 0 2rem 0;
  h5 {
    font-weight: 600 !important;
    margin-top: 0 !important;
    margin-bottom: 0.5rem !important;
  }
}
.filter-quicklinks {
  display: flex;
  justify-content: space-between;
  align-items: center;

  a {
    margin-right: 0.5rem;
  }
}
#Dashboard {
  .dashboard-table {
    a:hover,
    a:focus,
    a:active {
      outline-style: none;
      outline-width: 0;
    }
  }
  table thead th {
    background-color: transparent;
  }
  table tbody tr:nth-child(2n) {
    background-color: transparent;
  }
  td:focus-within,
  td:focus,
  td:hover {
    outline-style: none !important;
    outline-width: 0 !important;
  }

  .table-container {
    overflow-x: auto;
  }
  .table-wrapper {
    width: 100%;
    overflow-x: auto;
  }

  .dashboard-table {
    min-width: 600px; /* adjust this to the minimum width at which you want the table to start scrolling */

    min-width: 100%;
    border-collapse: collapse;
    border-spacing: 0;
    border-color: #e2e8f0;
    thead tr {
      border-bottom: 1px solid var(--dmpui-brand-blue-900) !important;
    }
    tr {
      border-bottom: 1px solid #eee;
    }
  }

  .table-header-name {
    padding: 0.875rem 0.75rem 0.875rem 1rem;
    text-align: left;
    font-size: 0.875rem;
    font-weight: 700;
    color: var(--dmpui-brand-blue-900);
  }

  .header-link {
    color: #1a202c;
    display: inline-flex;
  }

  .header-link:hover .chevron-icon,
  .header-link:focus .chevron-icon {
    visibility: visible;
  }

  .table-body {
    border-top: 1px solid #edf2f7;
    background-color: #fff;
    vertical-align: top;
  }
  .filter-button {
    padding: 5px 10px;
    font-size: 1rem;
    background-color: #eee;
    border-color: #ddd;
    border-radius: 9px;
  }
  .table-data-name {
    padding: 1rem 0.75rem 1rem 1rem;

    color: var(--dmpui-brand-blue-900);
  }
  .table-data-title a {
    color: var(--dmpui-brand-blue-900);
    font-weight: 400;
  }
  .table-data-date {
    padding: 1rem 0.75rem 1rem 1rem;

    white-space: nowrap;
    color: var(--dmpui-brand-blue-900);
  }
  .table-data-actions a {
    color: var(--dmpui-brand-blue-500) !important;
    text-decoration: underline;
    font-weight: 700;
    line-height: normal;
    text-decoration-thickness: 2px;
    text-decoration-skip-ink: auto;
  }
  .table-data-pi {
    margin-top: 5px;
    font-size: 0.8rem;
    color: #666;
  }
  .preview-button {
    margin-left: 8px;
  }
}

#quick-view-view {
  position: fixed;
  right: 0px;
  top: 0px;
  height: 100vh;
  background: #fff;
  border-left: 1px solid #eee;
  width: 90%;
  max-width: 360px;
  z-index: 99999;
  transform: translateX(200%);
  padding: 2rem 2rem;
  transition: all 0.3s ease-in-out;
}
#quick-view-modal.show {
  position: fixed;
  left: 0px;
  top: 0px;
  background: #0000000a;
  width: 100%;
  height: 100%;
  z-index: 10;
  overflow-y: scroll;

  #quick-view-view {
    opacity: 1;
    transform: translateX(0%);
    pointer-events: visible;
  }
}

.quick-view-text-cont {
  h4 {
    font-size: 1.08rem !important;

    margin-top: 1.25rem !important;
    margin-bottom: 0.5rem !important;
  }
}

